[project]
name = "notification-prioritization-env"
version = "1.0.0"
description = "Notification Prioritization OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "requests",
    "openai"
]
[project.scripts]
server = "server.app:main"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"